--- a/EquipWPF/EquipWPF.csproj
+++ b/EquipWPF/EquipWPF.csproj
@@ -35,6 +35,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OxyPlot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.Core.1.0.0\lib\net45\OxyPlot.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="OxyPlot.Wpf, Version=1.0.0.0, Culture=neutral, PublicKeyToken=75e952ba404cdbb0, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.Wpf.1.0.0\lib\net45\OxyPlot.Wpf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -55,21 +63,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="IUnit.cs" />
-    <Compile Include="IWeapon.cs" />
-    <Compile Include="MyRange.cs" />
-    <Compile Include="UnitBase.cs" />
-    <Compile Include="UnitWithHPandGun.cs" />
+    <Compile Include="Fighter.cs" />
+    <Compile Include="MainViewModel.cs" />
+    <Compile Include="WeaponFactory.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="IAimSurface.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Enviroment.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -93,6 +97,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -103,9 +109,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Interpolator\InterpSolution\InterpApp\InterpApp.csproj">
+      <Project>{5c93bceb-59bc-4510-823e-8860581b1332}</Project>
+      <Name>InterpApp</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Interpolator\InterpSolution\MyRandom\MyRandom.csproj">
       <Project>{db584195-10a3-4633-9388-919f7b8fe87a}</Project>
       <Name>MyRandom</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GameLoop\GameLoop.csproj">
+      <Project>{1044e80e-c218-4f42-b401-1c562e52517a}</Project>
+      <Name>GameLoop</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
