--- a/EquipWPF/packages.config
+++ b/EquipWPF/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net452" />
   <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net452" />
+  <package id="SmartThreadPool.dll" version="2.2.4" targetFramework="net452" />
 </packages>
